hacks to make my rock netboot a fit image

--- a/configs/rock_defconfig
+++ b/configs/rock_defconfig
@@ -50,3 +50,15 @@ CONFIG_SYSRESET=y
 CONFIG_SPL_TINY_MEMSET=y
 CONFIG_CMD_DHRYSTONE=y
 CONFIG_ERRNO_STR=y
+CONFIG_USB=y
+CONFIG_DM_USB=y
+CONFIG_CMD_USB=y
+CONFIG_USB_DWC2=y
+CONFIG_USB_HOST_ETHER=y
+CONFIG_USB_ETHER_ASIX=y
+CONFIG_CMD_NET=y
+CONFIG_BOOTP_SUBNETMASK=y
+CONFIG_BOOTP_GATEWAY=y
+CONFIG_FIT=y
+CONFIG_SPL_FIT=y
+CONFIG_FIT_VERBOSE=y
