rockchip: dts: increase gmac rx-delay on rk3399-firefly
On my setup the gmac can send things like dhcp requests which are also
acknowledged by the dhcp server but is never able to receive its response.

The vendor devicetree for the rk3399-firefly increased the rx_delay
setting which fixes these errors and makes my firefly able to netboot.

The same change is proposed for the Linux kernel and will be applied
by me.

Signed-off-by: Heiko Stuebner <heiko@sntech.de>

--- a/arch/arm/dts/rk3399-firefly.dts
+++ b/arch/arm/dts/rk3399-firefly.dts
@@ -210,7 +210,7 @@
 	snps,reset-active-low;
 	snps,reset-delays-us = <0 10000 50000>;
 	tx_delay = <0x28>;
-	rx_delay = <0x11>;
+	rx_delay = <0x1b>;
 	status = "okay";
 };
 
