rockchip: rk322x: allow selection of uart2 input channel
The rx signal of uart2 mostly used as debug uart can have two sources,
depending on pin requirements. So far the evb uses channel1 but most
rk322x tv boxes only ever allow access to channel0 via the pins shared
with the sdmmc controller.

Therefore add a config option selectable on a per board level, to set up
the correct channel.

Signed-off-by: Heiko Stuebner <heiko@sntech.de>

--- a/arch/arm/mach-rockchip/rk322x/Kconfig
+++ b/arch/arm/mach-rockchip/rk322x/Kconfig
@@ -4,6 +4,31 @@ config TARGET_EVB_RK3229
 	bool "EVB_RK3229"
 	select BOARD_LATE_INIT
 
+choice
+	prompt "UART2 channel used"
+
+	config ROCKCHIP_RK322X_UART2_CHAN0
+		bool "RK322x uart2 channel 0"
+		help
+		 The debug uart can take one of two routings to different
+		 soc pins for its RX signal which needs to be configured
+		 in a GRF setting depending on the layout of the board.
+
+		 This option will use channel 0 whose pins are shared with
+		 the sdmmc controller.
+
+	config ROCKCHIP_RK322X_UART2_CHAN1
+		bool "RK322x uart2 channel 1"
+		help
+		 The debug uart can take one of two routings to different
+		 soc pins for its RX signal which needs to be configured
+		 in a GRF setting depending on the layout of the board.
+
+		 This option will use channel 1 whose pins are shared with
+		 with the uart1 and spi2 controllers.
+
+endchoice
+
 config SYS_SOC
 	default "rockchip"
 
