--- a/configs/evb-rk3229_defconfig
+++ b/configs/evb-rk3229_defconfig
@@ -11,6 +11,7 @@ CONFIG_TPL_STACK=0x10088000
 CONFIG_TPL_ROCKCHIP_BACK_TO_BROM=y
 CONFIG_ROCKCHIP_SPL_RESERVE_IRAM=0x0
 CONFIG_TARGET_EVB_RK3229=y
+CONFIG_ROCKCHIP_RK322X_UART2_CHAN1=y
 CONFIG_SPL_STACK_R_ADDR=0x60600000
 CONFIG_DEFAULT_DEVICE_TREE="rk3229-evb"
 CONFIG_DEBUG_UART=y
