rockchip: rk322x: add rk3229-evb to dts Makefile
The devicetree was missing in the ROCKCHIP target, so add it.

Signed-off-by: Heiko Stuebner <heiko@sntech.de>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -30,6 +30,7 @@ dtb-$(CONFIG_EXYNOS7420) += exynos7420-espresso7420.dtb
 dtb-$(CONFIG_ARCH_ROCKCHIP) += \
 	rk3036-sdk.dtb \
 	rk3188-radxarock.dtb \
+	rk3229-evb.dtb \
 	rk3288-evb.dtb \
 	rk3288-fennec.dtb \
 	rk3288-firefly.dtb \
