rockchip: rk322x: add Nexbox A95X-R1 board
A TV-box board seemingly sold under a lot of brands, but Nexbox
seems to be the original manufacturer, see
http://www.inexbox.com/a95x-r1-tv-box-rockchip-rk3229-cpu/

Signed-off-by: Heiko Stuebner <heiko@sntech.de>

--- a/arch/arm/mach-rockchip/rk322x/Kconfig
+++ b/arch/arm/mach-rockchip/rk322x/Kconfig
@@ -1,5 +1,9 @@
 if ROCKCHIP_RK322X
 
+config TARGET_A95X_R1
+	bool "Nexbox A95X R1"
+	select BOARD_LATE_INIT
+
 config TARGET_EVB_RK3229
 	bool "EVB_RK3229"
 	select BOARD_LATE_INIT
@@ -38,6 +42,7 @@ config SYS_MALLOC_F_LEN
 config SPL_SERIAL_SUPPORT
 	default y
 
+source "board/nexbox/a95x_r1/Kconfig"
 source "board/rockchip/evb_rk3229/Kconfig"
 
 endif
