TSD: rockchip: px30: use uart5 for debug console on px30-evb
The pins of uart2 are shared with the sdmmc controller and we want to
keep the ability to also boot from sd-cards.

The board exposes uart5 on its pin header, so switch to that one.

Signed-off-by: Heiko Stuebner <heiko.stuebner@theobroma-systems.com>

--- a/arch/arm/dts/px30-evb.dts
+++ b/arch/arm/dts/px30-evb.dts
@@ -15,7 +15,7 @@
 	compatible = "rockchip,px30-evb", "rockchip,px30";
 
 	chosen {
-		stdout-path = "serial2:115200n8";
+		stdout-path = "serial5:115200n8";
 	};
 
 	adc-keys {
@@ -475,6 +475,7 @@
 	sd-uhs-sdr104;
 	vmmc-supply = <&vcc_sd>;
 	vqmmc-supply = <&vccio_sd>;
+	status = "okay";
 };
 
 &sdio {
@@ -494,7 +495,7 @@
 };
 
 &uart2 {
-	status = "okay";
+	status = "disabled";
 };
 
 &uart5 {
