--- a/configs/evb-px30_defconfig
+++ b/configs/evb-px30_defconfig
@@ -27,6 +27,7 @@ CONFIG_DISPLAY_BOARDINFO_LATE=y
 CONFIG_SPL_BOOTROM_SUPPORT=y
 # CONFIG_SPL_RAW_IMAGE_SUPPORT is not set
 CONFIG_SPL_STACK_R=y
+CONFIG_SYS_MMCSD_RAW_MODE_U_BOOT_SECTOR=0x200
 # CONFIG_TPL_BANNER_PRINT is not set
 CONFIG_SPL_CRC32_SUPPORT=y
 CONFIG_SPL_ATF=y
