--- a/configs/evb-px30_defconfig
+++ b/configs/evb-px30_defconfig
@@ -46,7 +46,7 @@ CONFIG_CMD_MMC=y
 CONFIG_CMD_USB=y
 CONFIG_CMD_USB_MASS_STORAGE=y
 # CONFIG_CMD_ITEST is not set
-# CONFIG_CMD_SETEXPR is not set
+CONFIG_CMD_SETEXPR=y
 # CONFIG_CMD_MISC is not set
 # CONFIG_SPL_DOS_PARTITION is not set
 # CONFIG_ISO_PARTITION is not set
